worked on dashboard apis
